--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node server/index.js",
-    "backend": "nodemon server/index.js",
+    "build": "tsc -p .",
+    "backend": "nodemon --watch \"server/**/*.ts\" --exec \"ts-node\" server/index.ts",
     "frontend": "npm run start --prefix client",
     "dev": "concurrently \"npm run backend\" \"npm run frontend\"",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -21,6 +22,8 @@
   },
   "homepage": "https://github.com/DIA-MIN/IWANNA#readme",
   "dependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/mongoose": "^5.11.97",
     "bcrypt": "^5.0.1",
     "cookie-parser": "^1.4.6",
     "express": "^4.18.1",
@@ -28,7 +31,11 @@
     "mongoose": "^6.4.3"
   },
   "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/node": "^18.0.6",
     "concurrently": "^7.2.2",
-    "nodemon": "^2.0.19"
+    "nodemon": "^2.0.19",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.7.4"
   }
 }
