--- a/client/package.json
+++ b/client/package.json
@@ -13,12 +13,14 @@
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.4",
     "@types/react-icons": "^3.0.0",
+    "@types/react-js-pagination": "^3.0.4",
     "axios": "^0.27.2",
     "http-proxy-middleware": "^2.0.6",
     "node-sass": "^7.0.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.3.1",
+    "react-js-pagination": "^3.0.3",
     "react-redux": "^8.0.2",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
