--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "^18.0.4",
     "@types/react-icons": "^3.0.0",
     "@types/react-js-pagination": "^3.0.4",
+    "axios": "^0.27.2",
     "gh-pages": "^4.0.0",
     "node-sass": "^7.0.1",
     "react": "^18.1.0",
